--- a/app/src/app/home/home.component.html
+++ b/app/src/app/home/home.component.html
@@ -13,6 +13,8 @@
 -->
 <div class="container">
 	<div class="jumbotron">
-		<h1>app</h1>
+		<h2>Willkommen in der Demo App!</h2>
+		Diese Angular Demo App basiert auf Hyperledger Composer und vereinfacht den Zugriff auf die im Hyperledger Fabric gespeicherten Daten.
+		Die App nutzt dafür ein REST API auf dem Fabric Node.
 	</div>
 </div>
