--- a/app/src/app/Dosimeter/Dosimeter.component.html
+++ b/app/src/app/Dosimeter/Dosimeter.component.html
@@ -16,93 +16,93 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="addParticipantModalLabel">Create participant</h4>
+          <h4 class="modal-title" id="addParticipantModalLabel">Dosimeter erzeugen</h4>
             <p class="modal-intro">Enter the required values below.</p>
         </div>
         <form [formGroup]="myForm">
           <div class="modal-body">
-  
-  
-            
-  
-              
+
+
+
+
+
                 <div class="form-group text-left">
-                  <label for="mac_adresse">mac_adresse</label>
-                  
+                  <label for="mac_adresse">MAC Adresse</label>
+
                     <input formControlName="mac_adresse" type="text" class="form-control">
-                  
+
                 </div>
-              
-            
-  
-              
-                <label for="dosimeterTyp">dosimeterTyp</label>
+
+
+
+
+                <label for="dosimeterTyp">Dosimeter-Typ</label>
                 <div class="checkbox">
-                  
+
                     <label>
                       <input
-                        
+
                           formControlName="dosimeterTyp"
-                        
+
                         name="dosimeterTyp"
                         value="GANZKOERPER"
                         type="radio"
-                        
+
                       />
                       GANZKOERPER
                     </label>
-                  
+
                     <label>
                       <input
-                        
+
                           formControlName="dosimeterTyp"
-                        
+
                         name="dosimeterTyp"
                         value="EXTREMITAET"
                         type="radio"
-                        
+
                       />
                       EXTREMITAET
                     </label>
-                  
+
                 </div>
-              
-            
-  
-              
+
+
+
+
                 <div class="form-group text-left">
                   <label for="dosisMessungen">dosisMessungen</label>
-                  
+
                       <textarea formControlName="dosisMessungen" class="form-control" rows="3"></textarea>
-                  
+
                 </div>
-              
-            
-  
-              
+
+
+
+
                 <div class="form-group text-left">
                   <label for="person">person</label>
-                  
+
                       <textarea formControlName="person" class="form-control" rows="3"></textarea>
-                  
+
                 </div>
-              
-            
-  
+
+
+
           </div>
           <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
             <button (click)="addParticipant(myForm);" type="submit" class="btn btn-success" data-dismiss="modal">Confirm</button>
-  
+
           </div>
         </form>
       </div>
     </div>
   </div>
-  
-  
-  
-  
+
+
+
+
   <div class="modal fade" id="updateParticipantModal" tabindex="-1" role="dialog" aria-labelledby="updateParticipantModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -112,85 +112,85 @@
         </div>
         <form [formGroup]="myForm">
           <div class="modal-body">
-  
-  
-            
+
+
+
               <div class="form-group text-left">
                 <label for="mac_adresse">mac_adresse</label>
-  
-                
-                  <input [ngModel]="mac_adresse" formControlName="mac_adresse" class="form-control" disabled="disabled">  
-                
-  
+
+
+                  <input [ngModel]="mac_adresse" formControlName="mac_adresse" class="form-control" disabled="disabled">
+
+
               </div>
-            
+
               <div class="form-group text-left">
                 <label for="dosimeterTyp">dosimeterTyp</label>
-  
-                
-                  
+
+
+
                     <div class="row">
                       <div class="col-xs-12 checkbox">
-                      
+
                         <label>
                           <input
-                            
+
                               formControlName="dosimeterTyp"
                               [ngModel]="dosimeterTyp"
-                            
+
                             name="dosimeterTyp"
                             value="GANZKOERPER"
                             type="radio"
-                            
+
                           />
                           GANZKOERPER
                         </label>
-                      
+
                         <label>
                           <input
-                            
+
                               formControlName="dosimeterTyp"
                               [ngModel]="dosimeterTyp"
-                            
+
                             name="dosimeterTyp"
                             value="EXTREMITAET"
                             type="radio"
-                            
+
                           />
                           EXTREMITAET
                         </label>
-                      
+
                       </div>
                     </div>
-                  
-                
-  
+
+
+
               </div>
-            
+
               <div class="form-group text-left">
                 <label for="dosisMessungen">dosisMessungen</label>
-  
-                
-                  
+
+
+
                     <textarea [ngModel]="dosisMessungen" formControlName="dosisMessungen" class="form-control" rows="3"></textarea>
-                  
-                
-  
+
+
+
               </div>
-            
+
               <div class="form-group text-left">
                 <label for="person">person</label>
-  
-                
-                  
+
+
+
                     <textarea [ngModel]="person" formControlName="person" class="form-control" rows="3"></textarea>
-                  
-                
-  
+
+
+
               </div>
-            
-  
-  
+
+
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -200,9 +200,9 @@
       </div>
     </div>
   </div>
-  
-  
-  
+
+
+
   <div class="modal fade" id="deleteParticipantModal" tabindex="-1" role="dialog" aria-labelledby="deleteParticipantModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -222,22 +222,22 @@
       </div>
     </div>
   </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
+
+
+
+
   <div class="container">
       <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
           <strong>Error:</strong> {{errorMessage}}
       </div>
-    
+
     <div class="row">
       <div class="col-md-9">
           <h1 class="participant-title" id='participantName'>Dosimeter</h1>
@@ -249,7 +249,7 @@
                   <path fill-rule="evenodd" d="M5.5,4.5 L9.5,4.5 L10,4.5 L10,5.5 L9.5,5.5 L5.5,5.5 L5.5,9.5 L5.5,10 L4.5,10 L4.5,9.5 L4.5,5.5 L0.5,5.5 L0,5.5 L0,4.5 L0.5,4.5 L4.5,4.5 L4.5,0.5 L4.5,0 L5.5,0 L5.5,0.5 L5.5,4.5 Z"/>
                 </svg>
             </span>
-          Create Participant
+          Dosimeter
         </button>
       </div>
     </div>
@@ -259,55 +259,39 @@
         <table class="table table-responsive">
           <thead class="thead">
             <tr class="thead-cols">
-              
-                  <th class="info">mac_adresse</th>
-              
-                  <th class="info">dosimeterTyp</th>
-              
-                  <th class="info">dosisMessungen</th>
-              
-                  <th class="info">person</th>
-              
-                <th class="info-actions">Actions</th>
+
+                  <th class="info">MAC Adresse</th>
+
+                  <th class="info">Dosimeter-Typ</th>
+
+                  <th class="info">Dosis-Messungen</th>
+
+                  <th class="info">Person</th>
+
+                <th class="info-actions">Aktionen</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let participant of allParticipants">
-  
-              
+
+
                   <td class="participant-properties">{{participant.mac_adresse}}</td>
-              
+
                   <td class="participant-properties">{{participant.dosimeterTyp}}</td>
-              
+
                   <td class="participant-properties">{{participant.dosisMessungen}}</td>
-              
+
                   <td class="participant-properties">{{participant.person}}</td>
-              
-              <td>
-                <button (click)="getForm(participant.mac_adresse);" type="button" class="btn btn-update" data-toggle="modal" data-target="#updateParticipantModal">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="12.8px" height="12.8px" viewBox="0 0 30.7 30.7" style="enable-background:new 0 0 30.7 30.7;" xml:space="preserve">
-                 <g>
-                   <path d="M1.5,30.7c0.1,0,0.2,0,0.4,0l5.9-1.5c0.8-0.2,1.3-1,1.1-1.8c-0.2-0.8-1-1.3-1.8-1.1l-3.6,0.9l0.8-3.8
-                     c0.2-0.8-0.4-1.6-1.2-1.8c-0.8-0.2-1.6,0.4-1.8,1.2L0,28.9c-0.1,0.5,0.1,1,0.4,1.4C0.7,30.6,1.1,30.7,1.5,30.7z"/>
-                   <path d="M10.4,25.2c0.3,0.3,0.7,0.4,1.1,0.4c0.4,0,0.8-0.1,1.1-0.4L30.3,7.5c0.6-0.6,0.6-1.5,0-2.1l-4.9-4.9
-                     C25.1,0.2,24.7,0,24.3,0c-0.4,0-0.8,0.2-1.1,0.4L5.5,18.2c-0.3,0.3-0.4,0.7-0.4,1.1s0.2,0.8,0.4,1.1L10.4,25.2z M24.3,3.6l2.8,2.8
-                     L11.5,22l-2.8-2.8L24.3,3.6z"/>
-                 </g>
-                 </svg>
-                </button>
-  
-                <button (click)="setId(participant.mac_adresse);" type="button" class="btn btn-delete" data-toggle="modal" data-target="#deleteParticipantModal">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="13.8px" height="16px" viewBox="0 0 65.9 76.2" style="enable-background:new 0 0 65.9 76.2;" xml:space="preserve">
-                 <path d="M42.8,60.2V22.6c0-1.7-1.3-3-3-3s-3,1.3-3,3v37.6c0,1.7,1.3,3,3,3S42.8,61.9,42.8,60.2z M29.1,60.2V22.6c0-1.7-1.3-3-3-3
-                   s-3,1.3-3,3v37.6c0,1.7,1.3,3,3,3S29.1,61.9,29.1,60.2z M56.2,19.6c-1.7,0-3,1.3-3,3V68c0,1.2-1,2.2-2.2,2.2H14.9
-                   c-1.2,0-2.2-1-2.2-2.2V22.6c0-1.7-1.3-3-3-3s-3,1.3-3,3V68c0,4.5,3.7,8.2,8.2,8.2H51c4.5,0,8.2-3.7,8.2-8.2V22.6
-                   C59.2,21,57.9,19.6,56.2,19.6z M62.9,10.3H49.3V3c0-1.7-1.3-3-3-3H19.6c-1.7,0-3,1.3-3,3v7.3H3c-1.7,0-3,1.3-3,3s1.3,3,3,3h59.9
-                   c1.7,0,3-1.3,3-3S64.5,10.3,62.9,10.3z M43.3,10.3H22.6V6h20.7L43.3,10.3L43.3,10.3z"/>
-                 </svg>
-                </button>
-              </td>
+
+							<td>
+								<button (click)="getForm(participant.kurzname);" type="button" class="btn btn-update" data-toggle="modal" data-target="#updateParticipantModal">
+									<fa name="edit" size="lg"></fa>
+								</button>
+
+								<button (click)="setId(participant.kurzname);" type="button" class="btn btn-delete" data-toggle="modal" data-target="#deleteParticipantModal">
+									<fa name="trash" size="lg"></fa>
+								</button>
+							</td>
             </tr>
           </tbody>
         </table>
