--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -18,14 +18,8 @@
         <p class="navbar-brand">ionray Demo App</p>
       </div>
       <ul class="nav navbar-nav">
-        <li class="dropdown active">
-            <a class="dropdown-toggle" data-toggle="dropdown">Assets</a>
-            <ul class="dropdown-menu scrollable-menu">
-
-            </ul>
-        </li>
-        <li class="dropdown active">
-          <a class="dropdown-toggle" data-toggle="dropdown">Participants</a>
+          <li class="dropdown active">
+          <a class="dropdown-toggle" data-toggle="dropdown">Teilnehmer</a>
           <ul class="dropdown-menu scrollable-menu">
 
             <li><a [routerLink]="['/StrahlenexponiertePerson']">Strahlenexponierte Personen</a></li>
@@ -41,7 +35,7 @@
           </ul>
       </li>
       <li class="dropdown active">
-        <a class="dropdown-toggle" data-toggle="dropdown">Transactions</a>
+        <a class="dropdown-toggle" data-toggle="dropdown">Transaktionen</a>
         <ul class="dropdown-menu scrollable-menu">
 
           <li><a [routerLink]="['/DosisMessung']">DosisMessung</a></li>
